Add CPU usage config option to early window, hide by default